--- a/spring-ws-support/pom.xml
+++ b/spring-ws-support/pom.xml
@@ -101,6 +101,14 @@
 					<groupId>jakarta.jms</groupId>
 					<artifactId>jakarta.jms-api</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
