--- a/spring-ws-core/pom.xml
+++ b/spring-ws-core/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>${glassfish-xml-bind.version}</version>
             <scope>runtime</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jdom</groupId>
@@ -210,6 +216,12 @@
             <artifactId>spring-hateoas</artifactId>
             <version>${spring-hateos.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
