--- a/smoke-tests/pom.xml
+++ b/smoke-tests/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.5</version>
+        <version>3.0.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -19,6 +19,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <spring-framework.version>6.0.9</spring-framework.version>
         <stagingRepositoryId>orgspringframework-springws</stagingRepositoryId>
     </properties>
 
