Reintroduce Docker containers for release.
Releasing requires additional tools inside the container that does the releasing process, whether to maven central or artifactory.

Resolves #1353.

--- a/ci/pipeline.properties
+++ b/ci/pipeline.properties
@@ -6,8 +6,13 @@ java.next.tag=20-jdk-jammy
 docker.java.main.image=harbor-repo.vmware.com/dockerhub-proxy-cache/library/eclipse-temurin:${java.main.tag}
 docker.java.next.image=harbor-repo.vmware.com/dockerhub-proxy-cache/library/eclipse-temurin:${java.next.tag}
 
+# Docker container images - for release
+docker.java.build.image=springci/spring-ws-eclipse-temurin-with-gpg:${java.main.tag}
+docker.java.build.image-proxy=harbor-repo.vmware.com/dockerhub-proxy-cache/${docker.java.build.image}
+
 # Docker environment settings
 docker.java.inside.basic=-v $HOME:/tmp/jenkins-home
 
 # Credentials
 artifactory.credentials=02bd1690-b54f-4c9f-819d-a77cb7a9822c
+dockerhub.credentials=hub.docker.com-springbuildmaster
