--- a/spring-ws-security/pom.xml
+++ b/spring-ws-security/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.ws</groupId>
         <artifactId>spring-ws</artifactId>
-        <version>4.0.4-SNAPSHOT</version>
+        <version>4.0.4</version>
     </parent>
 
     <artifactId>spring-ws-security</artifactId>
