--- a/spring-ws-test/pom.xml
+++ b/spring-ws-test/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.ws</groupId>
 		<artifactId>spring-ws</artifactId>
-		<version>4.0.4</version>
+		<version>4.0.5-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>spring-ws-test</artifactId>
