--- a/spring-ws-security/pom.xml
+++ b/spring-ws-security/pom.xml
@@ -108,6 +108,10 @@
                     <groupId>org.glassfish.jaxb</groupId>
                     <artifactId>jaxb-runtime</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.geronimo.javamail</groupId>
+                    <artifactId>geronimo-javamail_1.4_mail</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
